create html pages for TS debugging, update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,20 @@
 {
   "compilerOptions": {
-    "outDir": "./built",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
     "allowJs": true,
-    "target": "es6"
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "module": "NodeNext",
+    "outDir": "./built",
+    "sourceMap": true,
+    "lib": ["es2022", "dom", "dom.iterable"]
   },
   "include": ["./src/**/*"]
 }
